--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
     "test"
   ],
   "author": "arthurli",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^1.5.0",
+    "mocha": "^2.3.4",
+    "should": "^7.1.1",
+    "supertest": "^1.1.0"
+  }
 }
